# clearwing-vm

./: .gitignore  README.md  build.gradle  jitpack.yml  settings.gradle
annotations/: build.gradle
example/: build.gradle  config.json
example/src/main/resources/: CMakeLists.txt
jnigen/: build.gradle
runtime/: build.gradle
runtime/res/: cn1_globals.c  cn1_globals.h  nativeMethods.c  platform.c  runtime.cpp
runtime/res/clearwing/project/: CMakeLists.txt  FindFFI.cmake
runtime/res/clearwing/src/: Array.cpp  Array.hpp  ByteBuffer.cpp  CRC32.cpp  Character.cpp  Class.cpp  Clearwing.cpp  Clearwing.h  Clearwing.hpp  DateFormat.cpp  Deflater.cpp  Double.cpp  File.cpp  FileInputStream.cpp  FileOutputStream.cpp  Float.cpp  HashMap.cpp  Inflater.cpp  Instructions.hpp  Integer.cpp  Locale.cpp  Long.cpp  Math.cpp  NativeOutputStream.cpp  NativeUtils.cpp  Object.cpp  Platform.cpp  Proxy.cpp  Reflection.cpp  Runtime.cpp  RuntimeTypes.hpp  String.cpp  StringBuilder.cpp  StringToReal.cpp  System.cpp  Thread.cpp  Throwable.cpp  Utils.hpp  ZipFile.cpp
runtime/src/java/io/: CharArrayWriter.java  Externalizable.java  File.java  FileDescriptor.java  FileInputStream.java  FileOutputStream.java  FileReader.java  FileWriter.java  FilenameFilter.java  InputStreamReader.java  InvalidObjectException.java  NativeOutputStream.java  NotSerializableException.java  ObjectInput.java  ObjectInputStream.java  ObjectOutput.java  ObjectOutputStream.java  ObjectStreamException.java  PrintStream.java  RandomAccessFile.java  Reader.java  StreamTokenizer.java
transpiler/: build.gradle
(+421 files in other folders)
